--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="app">
         <header>
             <div class="grid">
@@ -41,22 +42,45 @@
                         <ul class="app__header-head-list">
                             <li class="app__header-head-item">
                                 <a href="#" class="app__header-head-link">
+                                    <i class="fa-solid fa-bell"></i>
+                                    <span class="app__header-head-content">Thông báo</span>
+                                </a>
+                            </li>
+                            <li class="app__header-head-item app__header-head-item-has-information">
+                                <a href="#" class="app__header-head-link"> 
                                     <i class="fa-sharp fa-solid fa-share-nodes"></i>
-                                    Kết nối
+                                    <span class="app__header-head-content">Kết nối</span>
                                 </a>
-                            </li>
-                            <li class="app__header-head-item">
-                                <a href="#" class="app__header-head-link">
-                                    Thông báo
-                                </a>
-                            </li>
+                                    <!-- Thông tin bên trong kết nối -->
+                                    <div class="app__header-information">
+                                        <h2 class="app__header-information-head">Kết nối với chúng tôi</h2>
+                                        <ul class="app__header-information-list">
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-facebook"></i>
+                                                </a>
+                                            </li>
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-facebook-messenger"></i>
+                                                </a>
+                                            </li>
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-twitter"></i>
+                                                </a>
+                                            </li>
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-tiktok"></i>
+                                                </a>
+                                            </li>
 
-                            <li class="app__header-head-item">
-                                <a href="#" class="app__header-head-link">
-                                    Nam hoàng
+                                        </ul>
+                                    </div>
                                 </a>
                             </li>
-
+                            
                         </ul>
                     </nav>
                 </div>
