--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <header>
             <div class="grid">
                 <div class="app__header">
+                    <!-- nav head -->
                     <nav class="app__header-head">
                         <ul class="app__header-head-list">
                             <li class="app__header-head-item">
@@ -57,7 +58,7 @@
                                         <ul class="app__header-information-list">
                                             <li class="app__header-information-item">
                                                 <a href="" class="app__header-information-link">
-                                                    <i class="fa-brands fa-facebook"></i>
+                                                    <i class="app__header-information-icon fa-brands fa-facebook"></i>
                                                 </a>
                                             </li>
                                             <li class="app__header-information-item">
@@ -83,6 +84,8 @@
                             
                         </ul>
                     </nav>
+                    <!-- nav end -->
+                    
                 </div>
             </div>
         </header>
