--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <header>
             <div class="grid">
                 <div class="app__header">
-                    <!-- nav head -->
                     <nav class="app__header-head">
                         <ul class="app__header-head-list">
                             <li class="app__header-head-item">
@@ -46,49 +45,134 @@
                                     <i class="fa-solid fa-bell"></i>
                                     <span class="app__header-head-content">Thông báo</span>
                                 </a>
+                                <!-- Thông tin bên trong thông báo -->
+                                <div class="app__header-notice">
+                                    <h2 class="app__header-notice-head">Thông báo của bạn</h2>
+                                    <hr class="app__header-notice-separator">
+                                    <ul class="app__header-notice-list">
+                                        <a href="#" class="app__header-notice-link app__header-notice--has-color">
+                                            <li class="app__header-notice-item">
+                                                <div class="app__header-notice-dictionary">
+                                                    <img src="assets/img/male.jpg" alt="Ảnh đại diện"
+                                                        class="app__header-notice-picture">
+                                                </div>
+                                                <div class="app__header-notice-note">
+                                                    <p class="app__header-note-content">Quỳnh vừa mới thêm một khóa học mới</p>
+                                                    <span class="app__header-notice-note-item">Chưa xem</span>
+                                                </div>
+                                            </li>
+                                        </a>
+                                        <a href="#" class="app__header-notice-link app__header-notice--has-color">
+                                            <li class="app__header-notice-item">
+                                                <div class="app__header-notice-dictionary">
+                                                    <img src="assets/img/conan.jpg" alt="Ảnh đại diện"
+                                                        class="app__header-notice-picture">
+                                                </div>
+                                                <div class="app__header-notice-note">
+                                                    <p class="app__header-note-content">CAND đã nhắn tin cho bạn</p>
+                                                    <span class="app__header-notice-note-item">Chưa xem</span>
+                                                </div>
+                                            </li>
+                                        </a>
+                                        <a href="#" class="app__header-notice-link">
+                                            <li class="app__header-notice-item">
+                                                <div class="app__header-notice-dictionary">
+                                                    <img src="assets/img/uchia_chrome.jpg" alt="Ảnh đại diện"
+                                                        class="app__header-notice-picture">
+                                                </div>
+                                                <div class="app__header-notice-note">
+                                                    <p class="app__header-note-content">Uchiha Chrome vừa mới follow bạn</p>
+                                                    <span class="app__header-notice-note-item">Đã xem</span>
+                                                </div>
+                                            </li>
+                                        </a>
+                                        <a href="#" class="app__header-notice-link">
+                                            <li class="app__header-notice-item">
+                                                <div class="app__header-notice-dictionary">
+                                                    <img src="assets/img/meo_lag.jpg" alt="Ảnh đại diện"
+                                                        class="app__header-notice-picture">
+                                                </div>
+                                                <div class="app__header-notice-note">
+                                                    <p class="app__header-note-content">
+                                                        Mèo lag đã bình luận về khóa học mà
+                                                        bạn đóng góp
+                                                    </p>
+                                                    <span class="app__header-notice-note-item">Đã xem</span>
+                                                </div>
+                                            </li>
+                                        </a>
+                                        <a href="#" class="app__header-notice-link app__header-notice--has-color">
+                                            <li class="app__header-notice-item">
+                                                <div class="app__header-notice-dictionary">
+                                                    <img src="assets/img/conan_2.png" alt="Ảnh đại diện"
+                                                        class="app__header-notice-picture">
+                                                </div>
+                                                <div class="app__header-notice-note">
+                                                    <p class="app__header-note-content">
+                                                        CAĐĐ vừa gửa bạn lời mời kết bạn
+                                                    </p>
+                                                    <span class="app__header-notice-note-item">Chưa xem</span>
+                                                </div>
+                                            </li>
+                                        </a>
+                                        <a href="#" class="app__header-notice-link">
+                                            <li class="app__header-notice-item">
+                                                <div class="app__header-notice-dictionary">
+                                                    <img src="assets/img/Tấn lỗ.jpg" alt="Ảnh đại diện"
+                                                        class="app__header-notice-picture">
+                                                </div>
+                                                <div class="app__header-notice-note">
+                                                    <p class="app__header-note-content">Tấn lỗ đã nhắn tin cho
+                                                        bạn</p>
+                                                    <span class="app__header-notice-note-item">Chưa xem</span>
+                                                </div>
+                                            </li>
+                                        </a>
+
+                                    </ul>
+                                </div>
                             </li>
                             <li class="app__header-head-item app__header-head-item-has-information">
-                                <a href="#" class="app__header-head-link"> 
+                                <a href="#" class="app__header-head-link">
                                     <i class="fa-sharp fa-solid fa-share-nodes"></i>
                                     <span class="app__header-head-content">Kết nối</span>
                                 </a>
-                                    <!-- Thông tin bên trong kết nối -->
-                                    <div class="app__header-information">
-                                        <h2 class="app__header-information-head">Kết nối với chúng tôi</h2>
-                                        <ul class="app__header-information-list">
-                                            <li class="app__header-information-item">
-                                                <a href="" class="app__header-information-link">
-                                                    <i class="app__header-information-icon fa-brands fa-facebook"></i>
-                                                </a>
-                                            </li>
-                                            <li class="app__header-information-item">
-                                                <a href="" class="app__header-information-link">
-                                                    <i class="fa-brands fa-facebook-messenger"></i>
-                                                </a>
-                                            </li>
-                                            <li class="app__header-information-item">
-                                                <a href="" class="app__header-information-link">
-                                                    <i class="fa-brands fa-twitter"></i>
-                                                </a>
-                                            </li>
-                                            <li class="app__header-information-item">
-                                                <a href="" class="app__header-information-link">
-                                                    <i class="fa-brands fa-tiktok"></i>
-                                                </a>
-                                            </li>
-
-                                        </ul>
-                                    </div>
+                                <!-- Thông tin bên trong kết nối -->
+                                <div class="app__header-information">
+                                    <h2 class="app__header-information-head">Kết nối với chúng tôi</h2>
+                                    <ul class="app__header-information-list">
+                                        <li class="app__header-information-item">
+                                            <a href="" class="app__header-information-link">
+                                                <i class="fa-brands fa-facebook"></i>
+                                            </a>
+                                        </li>
+                                        <li class="app__header-information-item">
+                                            <a href="" class="app__header-information-link">
+                                                <i class="fa-brands fa-facebook-messenger"></i>
+                                            </a>
+                                        </li>
+                                        <li class="app__header-information-item">
+                                            <a href="" class="app__header-information-link">
+                                                <i class="fa-brands fa-twitter"></i>
+                                            </a>
+                                        </li>
+                                        <li class="app__header-information-item">
+                                            <a href="" class="app__header-information-link">
+                                                <i class="fa-brands fa-tiktok"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                                 </a>
                             </li>
-                            
+
                         </ul>
                     </nav>
-                    <!-- nav end -->
-                    
                 </div>
             </div>
         </header>
+
+
 
         <footer></footer>
     </div>
