Nam chinh sua lai bo cuc thanh taskbar

--- a/index.html
+++ b/index.html
@@ -142,94 +142,147 @@
                                     </ul>
                                 </div>
                             </li>
-                            
-                            <li class="app__header-head-item">
-                                <a href="#" class="app__header-head-link">
-                                    Đăng nhập
-                                </a>
+                            <!-- Thẻ avartar -->
+                            <li class="app__header-head-item app__header-head-item-has-avartar">
+                                <!-- Hiển thị thông tin khi chưa đăng nhập -->
+                                <!-- <a href="#" class="app__header-head-link">
+                                    Đăng nhập | Đăng ký
+                                </a> -->
+                                
+                                <img src="assets/img/Avartar.jpg" alt="Ảnh avartar" class="app__header-head-avartar">
+                                <!-- Thông tin trong phân avartar -->
+                                 <div class="app__header-avartar">
+                                    <div class="app__header-avartar-heading">
+                                        <img src="assets/img/Avartar.jpg" alt="Ảnh đại diện"
+                                            class="app__header-avartar-in">
+                                        <div class="app__header-avartar-nickname">
+                                            <h2 class="app__header-avartar-text">Nam Hoàng Hoàng</h2>
+                                            <p class="app__header-avartar-text">@karysqa123</p>
+                                        </div>
+                                    </div>
+                                    <hr class="app__header-avartar-separator">
+                                    <ul class="app__header-avartar-list">
+                                        <a href="#" class="app__header-avartar-link">
+
+                                            <li class="app__header-avartar-list-item">Trang cá nhân</li>
+                                        </a>
+                                        <hr class="app__header-avartar-separator">
+                                        <a href="#" class="app__header-avartar-link">
+
+                                            <li class="app__header-avartar-list-item">Tạo khóa học</li>
+                                        </a>
+                                        <a href="#" class="app__header-avartar-link">
+
+                                            <li class="app__header-avartar-list-item">Khóa học của tôi</li>
+                                        </a>
+                                        <hr class="app__header-avartar-separator">
+                                        <a href="#" class="app__header-avartar-link">
+
+                                            <li class="app__header-avartar-list-item">Khóa học đã lưu</li>
+                                        </a>
+                                        <hr class="app__header-avartar-separator">
+                                        <a href="#" class="app__header-avartar-link">
+
+                                            <li class="app__header-avartar-list-item">Cài đặt</li>
+                                        </a>
+                                        <a href="#" class="app__header-avartar-link">
+
+                                            <li class="app__header-avartar-list-item">Đăng xuất</li>
+                                        </a>
+                                    </ul>
+
+                                </div> 
                             </li>
                         </ul>
                     </nav>
 
                     <!-- nav end -->
                     <nav class="app__header-end">
-                        <ul class="app__header-end-list app__header-end-left">
-                            <li class="app__header-end-item">
-                                <a href="#" class="app__header-end-link">
-                                    <img src="assets/img/icon_people.png" alt="Ảnh về chúng tôi" class="app__header-end-picture">
-                                    Giới thiệu
-                                </a>
-                            </li>
-                            <li class="app__header-end-item">
-                                <a href="#" class="app__header-end-link">
-                                    <img src="assets/img/myCourse_2.png" alt="Ảnh khóa học của tôi" class="app__header-end-picture">
-                                    My course
-                                </a>
-                            </li>
-                            <li class="app__header-end-item">
-                                <a href="#" class="app__header-end-link">
-                                    <img src="assets/img/Dang_follow.png" alt="Ảnh đang follow" class="app__header-end-picture">
-                                    Đang Follow
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="app__header-end-left">
+                            <ul class="app__header-end-list app__header-end--flexLeft">
+                                <li class="app__header-end-item">
+                                    <a href="#" class="app__header-end-link">
+                                        <img src="assets/img/icon_people.png" alt="Ảnh về chúng tôi"
+                                            class="app__header-end-picture">
+                                        Giới thiệu
+                                    </a>
+                                </li>
+                                <li class="app__header-end-item">
+                                    <a href="#" class="app__header-end-link">
+                                        <img src="assets/img/myCourse_2.png" alt="Ảnh khóa học của tôi"
+                                            class="app__header-end-picture">
+                                        My course
+                                    </a>
+                                </li>
+                                <li class="app__header-end-item">
+                                    <a href="#" class="app__header-end-link">
+                                        <img src="assets/img/Dang_follow.png" alt="Ảnh đang follow"
+                                            class="app__header-end-picture">
+                                        Đang Follow
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
 
+                        <div class="app__header-end-right">
+                            <ul class="app__header-end-list app__header-end--flexRight">
+                                <li class="app__header-end-item">
+                                    <a href="#" class="app__header-end-link">
+                                        <img src="assets/img/icon_follower_3.png" alt="Ảnh follow"
+                                            class="app__header-end-picture">
+                                        Follower
+                                    </a>
+                                </li>
 
-                        <ul class="app__header-end-list app__header-end-right">
+                                <li class="app__header-end-item">
+                                    <a href="#" class="app__header-end-link">
+                                        <img src="assets/img/icon_donate.png" alt="Ảnh icon_donate"
+                                            class="app__header-end-picture">
+                                        Ủng hộ tôi
+                                    </a>
+                                </li>
 
-                            <li class="app__header-end-item">
-                                <a href="#" class="app__header-end-link">
-                                    <img src="assets/img/icon_follower_3.png" alt="Ảnh follow" class="app__header-end-picture">
-                                    Follower
-                                </a>
-                            </li>
-
-                            <li class="app__header-end-item">
-                                <a href="#" class="app__header-end-link">
-                                    <img src="assets/img/icon_donate.png" alt="Ảnh icon_donate" class="app__header-end-picture">
-                                    Ủng hộ tôi
-                                </a>
-                            </li>
-
-                            <li class="app__header-end-item app__header-head-item-has-information">
-                                <a href="#" class="app__header-end-link">
-                                    <img src="assets/img/icon_connection_2.png" alt="Ảnh kết nối" class="app__header-end-picture">
-                                    <span class="app__header-head-content">Kết nối</span>
-                                </a>
-                                <!-- Thông tin bên trong kết nối -->
-                                <div class="app__header-information">
-                                    <h2 class="app__header-information-head">Kết nối với chúng tôi</h2>
-                                    <ul class="app__header-information-list">
-                                        <li class="app__header-information-item">
-                                            <a href="" class="app__header-information-link">
-                                                <i class="fa-brands fa-facebook"></i>
-                                            </a>
-                                        </li>
-                                        <li class="app__header-information-item">
-                                            <a href="" class="app__header-information-link">
-                                                <i class="fa-brands fa-facebook-messenger"></i>
-                                            </a>
-                                        </li>
-                                        <li class="app__header-information-item">
-                                            <a href="" class="app__header-information-link">
-                                                <i class="fa-brands fa-twitter"></i>
-                                            </a>
-                                        </li>
-                                        <li class="app__header-information-item">
-                                            <a href="" class="app__header-information-link">
-                                                <i class="fa-brands fa-tiktok"></i>
-                                            </a>
-                                        </li>
-                                        <li class="app__header-information-item">
-                                            <a href="" class="app__header-information-link">
-                                                <i class="fa-brands fa-reddit"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                </a>
-                            </li>
-                        </ul>
+                                <li class="app__header-end-item app__header-head-item-has-information">
+                                    <a href="#" class="app__header-end-link">
+                                        <img src="assets/img/icon_connection_2.png" alt="Ảnh kết nối"
+                                            class="app__header-end-picture">
+                                        <span class="app__header-head-content">Kết nối</span>
+                                    </a>
+                                    <!-- Thông tin bên trong kết nối -->
+                                    <div class="app__header-information">
+                                        <h2 class="app__header-information-head">Kết nối với chúng tôi</h2>
+                                        <ul class="app__header-information-list">
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-facebook"></i>
+                                                </a>
+                                            </li>
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-facebook-messenger"></i>
+                                                </a>
+                                            </li>
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-twitter"></i>
+                                                </a>
+                                            </li>
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-tiktok"></i>
+                                                </a>
+                                            </li>
+                                            <li class="app__header-information-item">
+                                                <a href="" class="app__header-information-link">
+                                                    <i class="fa-brands fa-reddit"></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </nav>
                 </div>
             </div>
