--- a/index.html
+++ b/index.html
@@ -606,18 +606,22 @@
                                                         </div>
                                                     </div>
                                                     <div class="app__header-end-viewer-icon">
-                                                        <a href="#" class="app__header-end-viewer-connect app__header-end-viewer-connect--1">
+                                                        <a href="#"
+                                                            class="app__header-end-viewer-connect app__header-end-viewer-connect--1">
                                                             <i class="fa-solid fa-comment"></i>
-                                                            <div class="app__header-end-viewer-information">Nhắn tin</div>
+                                                            <div class="app__header-end-viewer-information">Nhắn tin
+                                                            </div>
                                                         </a>
-                                                        <a href="#" class="app__header-end-viewer-connect app__header-end-viewer-connect--2">
+                                                        <a href="#"
+                                                            class="app__header-end-viewer-connect app__header-end-viewer-connect--2">
                                                             <svg width="20" height="20" viewBox="0 0 48 48"
                                                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                                     d="M13.0001 13C13.0001 9.68629 15.6864 7 19.0001 7C22.3139 7 25.0001 9.68629 25.0001 13C25.0001 16.3137 22.3139 19 19.0001 19C15.6864 19 13.0001 16.3137 13.0001 13ZM19.0001 3C13.4773 3 9.00015 7.47715 9.00015 13C9.00015 18.5228 13.4773 23 19.0001 23C24.523 23 29.0001 18.5228 29.0001 13C29.0001 7.47715 24.523 3 19.0001 3ZM5.19435 40.9681C6.70152 35.5144 10.0886 32.2352 13.9162 30.738C17.7125 29.2531 22.0358 29.4832 25.6064 31.2486C26.1015 31.4934 26.7131 31.338 26.9931 30.8619L28.0072 29.1381C28.2872 28.662 28.1294 28.0465 27.6384 27.7937C23.0156 25.4139 17.4034 25.0789 12.4591 27.0129C7.37426 29.0018 3.09339 33.3505 1.2883 40.0887C1.14539 40.6222 1.48573 41.1592 2.02454 41.2805L3.97575 41.7195C4.51457 41.8408 5.04724 41.5004 5.19435 40.9681ZM44.7074 30.1212C45.0979 29.7307 45.0979 29.0975 44.7074 28.707L43.2932 27.2928C42.9026 26.9023 42.2695 26.9023 41.8789 27.2928L30.0003 39.1715L25.1216 34.2928C24.7311 33.9023 24.0979 33.9023 23.7074 34.2928L22.2932 35.707C21.9026 36.0975 21.9026 36.7307 22.2932 37.1212L28.586 43.4141C29.3671 44.1952 30.6334 44.1952 31.4145 43.4141L44.7074 30.1212Z">
                                                                 </path>
                                                             </svg>
-                                                            <div class="app__header-end-viewer-information">Bỏ theo dõi</div>
+                                                            <div class="app__header-end-viewer-information">Bỏ theo dõi
+                                                            </div>
                                                         </a>
                                                     </div>
                                                 </a>
@@ -625,16 +629,114 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li class="app__header-end-item">
+
+                                <li class="app__header-end-item app__header-end-item-has-donate">
                                     <a href="#" class="app__header-end-link">
                                         <img src="assets/img/icon_donate.png" alt="Ảnh icon_donate"
                                             class="app__header-end-picture">
                                         Ủng hộ
+                                    </a>
                                         <!-- Thông tin bên trong Ủng hộ -->
                                         <div class="app__header-end-donate">
-                                            
+                                            <div class="app__header-end-donate-head">
+                                                <ul class="app__header-end-donate-head-list">
+                                                    <li class="app__header-end-donate-head-item">
+                                                        <a href="#app__header-end-donate-1" class="app__header-end-donate-infotmation">Donate</a>
+                                                    </li>
+                                                    <li class="app__header-end-donate-head-item">
+                                                        <a href="#app__header-end-donate-2" class="app__header-end-donate-infotmation app__header-end-donate-infotmation--change">Received donate</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <hr class="app__header-end-donate-separator">
+                                            <div id="app__header-end-donate-1" class="app__header-end-donate-support">                     
+                                                <h3 class="app__header-end-donate-heading">Ủng hộ</h3>
+                                                <ul class="app__header-end-donate-list app__header-end-donate-list--1">
+                                                    <li class="app__header-end-donate-item">
+                                                        <a href="#" class="app__header-end-donate-link">
+                                                            <div class="app__header-end-donate-photo">
+                                                                <img src="assets/img/male_1.jpg" alt="Ảnh đại diện" class="app__header-end-donate-picture">
+                                                                <div class="app__header-end-donate-content">
+                                                                    <h3 class="app__header-end-donate-userName">Ngọc Ánh</h3>
+                                                                    <p class="app__header-end-donate-description">@AnhNgoc</p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="app__header-end-donate-icon">
+                                                                <a href="#" class="app__header-end-donate-icon-link">
+                                                                    <i class="fa-solid fa-circle-dollar-to-slot"></i>
+                                                                </a>
+                                                            </div>
+                                                        </a>
+                                                    </li>       
+                                                    <li class="app__header-end-donate-item">
+                                                        <a href="#" class="app__header-end-donate-link">
+                                                            <div class="app__header-end-donate-photo">
+                                                                <img src="assets/img/male_2.jpg" alt="Ảnh đại diện" class="app__header-end-donate-picture">
+                                                                <div class="app__header-end-donate-content">
+                                                                    <h3 class="app__header-end-donate-userName">Thư Nguyễn</h3>
+                                                                    <p class="app__header-end-donate-description">@NguyenThu</p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="app__header-end-donate-icon">
+                                                                <a href="#" class="app__header-end-donate-icon-link">
+                                                                    <i class="fa-solid fa-circle-dollar-to-slot"></i>
+                                                                </a>
+                                                            </div>
+                                                        </a>
+                                                    </li> 
+                                                    <li class="app__header-end-donate-item">
+                                                        <a href="#" class="app__header-end-donate-link">
+                                                            <div class="app__header-end-donate-photo">
+                                                                <img src="assets/img/male_3.jpg" alt="Ảnh đại diện" class="app__header-end-donate-picture">
+                                                                <div class="app__header-end-donate-content">
+                                                                    <h3 class="app__header-end-donate-userName">Võ Tòng</h3>
+                                                                    <p class="app__header-end-donate-description">@DamHo</p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="app__header-end-donate-icon">
+                                                                <a href="#" class="app__header-end-donate-icon-link">
+                                                                    <i class="fa-solid fa-circle-dollar-to-slot"></i>
+                                                                </a>
+                                                            </div>
+                                                        </a>
+                                                    </li>                                     
+                                                </ul>
+                                            </div>
+                                            <div id="app__header-end-donate-2" class="app__header-end-donate-history-support">      
+                                                <h3 class="app__header-end-donate-heading">Lịch sử nhận donate</h3>
+                                                <ul class="app__header-end-donate-list app__header-end-donate-list--1">
+                                                    <li class="app__header-end-donate-item">
+                                                        <a href="#" class="app__header-end-donate-link">
+                                                            <div class="app__header-end-donate-photo">
+                                                                <img src="assets/img/male_1.jpg" alt="Ảnh đại diện" class="app__header-end-donate-picture">
+                                                                <div class="app__header-end-donate-content">
+                                                                    <h3 class="app__header-end-donate-userName">Ngọc Ánh</h3>
+                                                                    <p class="app__header-end-donate-description">@AnhNgoc</p>
+                                                                </div>
+                                                            </div>
+                                                        </a>
+                                                        <div class="app__header-end-donate-icon">
+                                                            <p class="app__header-end-donate-money">+25000000đ</p>
+                                                        </div>
+                                                    </li>  
+                                                    <li class="app__header-end-donate-item">
+                                                        <a href="#" class="app__header-end-donate-link">
+                                                            <div class="app__header-end-donate-photo">
+                                                                <img src="assets/img/Tấn lỗ.jpg" alt="Ảnh đại diện" class="app__header-end-donate-picture">
+                                                                <div class="app__header-end-donate-content">
+                                                                    <h3 class="app__header-end-donate-userName">Nhà Thơ Tấn Lỗ</h3>
+                                                                    <p class="app__header-end-donate-description">@LoTan</p>
+                                                                </div>
+                                                            </div>
+                                                        </a>
+                                                        <div class="app__header-end-donate-icon">
+                                                            <p class="app__header-end-donate-money">+45000000đ</p>
+                                                        </div>
+                                                    </li>                                                                                  
+                                                </ul>
+                                            </div>
                                         </div>
-                                    </a>
+                                   
                                 </li>
 
                                 <li class="app__header-end-item app__header-head-item-has-information">
