Da xong phan TaskBar

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                                     </a>
                                     <!-- Thông tin bên trong kết nối -->
                                     <div class="app__header-information">
-                                        <h2 class="app__header-information-head">Kết nối với chúng tôi</h2>
+                                        <h2 class="app__header-information-head">Kết nối với chúng tôi:</h2>
                                         <ul class="app__header-information-list">
                                             <li class="app__header-information-item">
                                                 <a href="" class="app__header-information-link">
