--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="app">
         <header>
-            <div class="grid">
+            <div class="container-fluid">
                 <div class="app__header">
                     <!-- nav head -->
                     <nav class="app__header-head">
